test/Fail/Issue2332.agda
record R : Set₁ where
  field
    _A : Set

P : Set → Set₁
P R.A = Set
